--- a/SwiftDemo/Supporting Files/Base.lproj/Main.storyboard
+++ b/SwiftDemo/Supporting Files/Base.lproj/Main.storyboard
@@ -14,14 +14,83 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="fsS-wa-i9M">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="W03-cQ-qXL"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="hGM-XF-reZ"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fsS-wa-i9M" secondAttribute="bottom" id="5H0-4h-UFj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fsS-wa-i9M" secondAttribute="trailing" id="bsA-Su-d1q"/>
+                            <constraint firstItem="fsS-wa-i9M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rRN-gp-cFh"/>
+                            <constraint firstItem="fsS-wa-i9M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="yQX-Hp-6w0"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="WRs-qK-cRN"/>
+                    <connections>
+                        <outlet property="tableView" destination="fsS-wa-i9M" id="toV-fO-7KD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="514" y="137"/>
+            <point key="canvasLocation" x="-272.46376811594206" y="79.6875"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ksG-g4-SGk">
+            <objects>
+                <viewController id="1wT-zQ-Acq" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3CO-Fe-FQf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="quH-FB-dTc"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="jkP-R0-swa"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gg8-CP-fs9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="341" y="-668"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="bgn-TB-YfQ">
+            <objects>
+                <viewController id="xIx-sb-3v1" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g4q-UF-qos">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Ytc-iV-gww"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="wwr-Sg-R6j"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xPl-wE-M1L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="341" y="-1069"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="3aV-uE-ElT">
+            <objects>
+                <tabBarController id="m3g-tP-AcQ" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CC4-Bh-0mx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="2Rq-pe-oGT" kind="relationship" relationship="viewControllers" id="6aK-vr-Wbp"/>
+                        <segue destination="dET-cA-8wD" kind="relationship" relationship="viewControllers" id="boi-ro-MhL"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lzb-hI-ixY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-997" y="-927"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="8ux-C2-ltO">
@@ -39,7 +108,45 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hWS-5f-8cY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-184.05797101449278" y="136.60714285714286"/>
+            <point key="canvasLocation" x="-996" y="81"/>
+        </scene>
+        <!--Products-->
+        <scene sceneID="w5K-PO-XMy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2Rq-pe-oGT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Products" id="FUi-xw-uMY"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Oic-oa-4d6">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="xIx-sb-3v1" kind="relationship" relationship="rootViewController" id="Bhp-PH-aTe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eIp-LH-3xY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-325" y="-1069"/>
+        </scene>
+        <!--Us-->
+        <scene sceneID="hkL-Km-hU4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dET-cA-8wD" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Us" id="DQM-gA-T3x"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Yob-pV-p4k">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1wT-zQ-Acq" kind="relationship" relationship="rootViewController" id="oZZ-fi-Nqe"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CGh-bt-Owy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-326" y="-667"/>
         </scene>
     </scenes>
 </document>
